--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,6 +34,17 @@ section#telefone{
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
 
+section#redes-socias{
+    text-align: right;
+}
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+}
+
 iframe#tela{
     position: relative;
     top: 80px;
